--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
