--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
-CLIENT_ID=255036840610-eckfr94ko0tcn53r4227e8lvqpp4k4d2.apps.googleusercontent.com
-CLIENT_SECRET=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
-CLIENT_URL=http://localhost:3000
-MONGO_URI=mongodb+srv://developer-bhavil:123@cluster0.pbiym.mongodb.net/?retryWrites=true&w=majority
+CLIENT_ID=<YOUR_CLIENT_ID_HERE>
+CLIENT_SECRET=<YOUR_CLIENT_SECRET_HERE>
+CLIENT_URL=<YOUR_URL_HERE>
+MONGO_URI=<YOUR_URL_HERE>
